<resources>
    <string name="app_name">RoomMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="nickname">Nickname</string>
    <string name="menu">Menu</string>
    <string name="no_user_found">No user found!</string>
</resources>